--- a/css/card-style.css
+++ b/css/card-style.css
@@ -1,5 +1,6 @@
 @import url(global-style.css);
 
+
 .main{
      display: flex;
      flex-flow: column wrap;
@@ -16,13 +17,12 @@
      display: flex;
      margin: 20px auto;
      justify-content: center;
-     width: max-content;
      gap: 14px;
 }
 
 .card-box{
      background-color: var(--roxoEscuro);
-     width: 60%;
+     width: 820px;
      border-radius: 50px;
      padding: 30px 0;
 }
@@ -60,7 +60,7 @@ a{
 .desc{
      display: flex;
      gap: 15px;
-     width: 75vw;
+     width: 970px;
      margin: 20px;
      max-height: fit-content;
      overflow: hidden;
@@ -97,7 +97,7 @@ a{
      }
 
      .card-box{
-          width: 45%;
+          width: 550px;
           padding: 15px 0;
           border-radius: 30px;
      }
@@ -127,7 +127,9 @@ a{
 
 
 @media screen and (max-height:769px) {
-
+     .main{
+          background-color: black;
+     }
 }
 
 
