--- a/css/global-style.css
+++ b/css/global-style.css
@@ -36,7 +36,7 @@ body{
      display: flex;
      height: 50px;
      justify-content: space-between;
-     
+     box-sizing: border-box;
 }
 
 .topnav a {
@@ -58,6 +58,26 @@ body{
      background-color: var(--roxoEscuro);
      color: var(--branco);
 }
+
+.nav_btt{
+     display: flex;
+     position: absolute;
+     top: 1.3rem;
+     right: 1rem;
+     flex-direction: column;
+     justify-content: space-between;
+     width: 30px;
+     height: 23px;
+}
+.nav_btt .bar{
+     height: 3px;
+     width: 100%;
+     background-color: var(--branco);
+     border-radius: 10px;
+     transition: 0.5s;
+}
+
+
 
 .search-container{
      display: flex;
