--- a/css/global-style.css
+++ b/css/global-style.css
@@ -108,9 +108,7 @@ body{
      background: var(--rosaClaro);
 }
 
-@media screen and (max-height:1025px) {
 
-}
 
 
 @media screen and (max-height:769px) {
@@ -123,13 +121,13 @@ body{
 
           /* Parte para a animação */
           display: block;
-          position: absolute; /*Fica em cima de qualquer outro elemento do site*/
-          width: 100%; /*Ocupa toda a tela*/
+          position: absolute;
+          width: 100%;
           top: 50px;
           background: var(--roxoClaro);
-          z-index: 1000; /*Garante que esse elemento vai ficar por cima dos outros, a não ser que algum elemento possua z-index de 10.000*/
-          height: 0;  /*Começa como 0 para a animação funcionar*/
-          transition: 0.6s; /*Qualquer mudança de elemento vai ter uma transição de 0.6s*/
+          z-index: 1000;
+          height: 0;
+          transition: 0.6s;
           visibility: hidden; /*Para a transição funcionar, o elemento precisa existir, portanto não se pode o display: none, trocando para o visibility: hidden*/
           overflow-y: hidden; 
           /*overflow-y > y = altura
@@ -137,10 +135,7 @@ body{
      }
      .topnav.active .menu{
           height: calc(100vh - 50px); 
-          /*vh > viewport height = o tamanho da tela
-          O espaçamento normal seria = a altura + 60px(definido pelo top), para impedir isso, utiliza-se um cálculo > calc(calculo);
-          */
-          visibility: visible; /*Visível*/
+          visibility: visible;
           overflow-y: auto;
           /*overflow: auto > Cria uma barra de scroll para quando existirem itens fora de vista*/
      }
@@ -159,7 +154,7 @@ body{
 
      .topnav.active .nav_btt #center{
           transition: 0.5s;
-          opacity: 0; /* Regula a opacidade do elemento */
+          opacity: 0;
      }
      .topnav.active .nav_btt #top{
           transition: 0.5s;
@@ -173,5 +168,5 @@ body{
 
 
 @media screen and (max-height:325px) {
-  
+
 }
