--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,12 +3,12 @@ h1{
     text-align: center;
     font-size: 50px;
 }
-h2{
+.lanca h2{
   color:var(--preto);
   float: right;
 }
 
-.lanca, h2, input{
+.lanca, .lanca h2, input{
   font-size: 17px;
   display: inline-block;
 }
@@ -25,7 +25,7 @@ h5{
   color: var(--roxoClaro);
   white-space: nowrap;
 }
-h3{
+.sin{
     color: var(--roxoClaro);;
     font-size: 35px;
     display: inline-block;
@@ -33,7 +33,7 @@ h3{
 h4{
   font-size: 16px;
 }
-h3 ,iframe{
+.sin ,iframe{
     display: inline-block;
     float: left;
 }
