--- a/css/videos.css
+++ b/css/videos.css
@@ -5,7 +5,7 @@
     width: 90vw;
     height: 480px;
     display: flex;   
-    background: #F2C2CF;
+    background: var(--rosaClaro);
     margin: 20px;
 }
 
@@ -33,7 +33,7 @@
 .container .videos video:hover,
 .container .videos .active{
     transform: scale(1.06);
-    border: 3px solid #731F5C;
+    border: 3px solid var(--roxoEscuro);
 }
 
 .container .main-video{
@@ -45,5 +45,5 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border: 3px solid #731F5C;
+    border: 3px solid var(--roxoEscuro);
 }
